# gwaei

./: .gitignore  Makefile.am  README.md  Vagrantfile  autogen.sh  configure-debug  configure.ac  index.html
src/dictionary/: Makefile.am  edictionary.c  exampledictionary.c  kanjidictionary.c  radicalsdictionary.c  unknowndictionary.c
src/dictionary/include/dictionary/: Makefile.am  edictionary.h
src/dictionary/tests/: Makefile.am  testdictionarymodule.c  testedictionary  testedictionary.c  testexampledictionary.c  testkanjidictionary.c  testradicalsdictionary.c  testunknowndictionary.c
src/dictionary/tests/data/: edictionary.data  examplesdictionary.data  kanjidictionary.data  radicalsdictionary.data
src/gwaei/: Makefile.am  addvocabularywindow.ui  application-callbacks.c  application.c  dictionaryinstallwindow-callbacks.c  dictionaryinstallwindow.c  dictionaryinstallwindow.ui  flashcardwindow.ui  gwaei-valgrind.sh  gwaei.c  history.c  installprogresswindow-callbacks.c  installprogresswindow.c  installprogresswindow.ui  kanjipad-candidatearea.c  kanjipadwindow.c  kanjipadwindow.ui  mainwindow-actionable-interface.c  mainwindow-callbacks.c  mainwindow.c  pluginmanager.c  radicalswindow.ui  searchwindow-callbacks.c  searchwindow-output.c  searchwindow.c  searchwindow.ui  settingswindow-callbacks.c  settingswindow.c  settingswindow.ui  spellcheck-callbacks.c  spellcheck.c  vocabularywindow-callbacks.c
src/gwaei/include/gwaei/: Makefile.am  application-callbacks.h  application-private.h  application.h  gwaei.h  installprogresswindow-callbacks.h  installprogresswindow-private.h  kanjipadwindow-private.h  mainwindow-actionable-interface.h  mainwindow-callbacks.h  mainwindow-private.h  mainwindow.h  search-data.h  searchwindow-callbacks.h  searchwindow-output.h  searchwindow-private.h  searchwindow.h  settingswindow-callbacks.h  settingswindow-private.h  spellcheck-private.h
src/libgwaei/: Makefile.am  actionable.c  actiongroup.c  addvocabularydialog-callbacks.c  addvocabularydialog.c  deletevocabularylistdialog-callbacks.c  deletevocabularylistdialog.c  dictionarylist-callbacks.c  dictionarylist-iter.c  dictionarylist.c  dictionarylistbox-callbacks.c  dictionarylistbox.c  dictionaryliststore-callbacks.c  dictionaryliststore-treemodel-interface.c  dictionaryliststore.c  dictionarylistview.c  dictionaryview.c  flashcardwidget-callbacks.c  flashcardwidget.c  kanjipad-drawingarea.c  libgwaei.c  menuable.c  printing.c  radicalswidget-callbacks.c  resultstabbedtextview.c  resultstextview-actionable-interface.c  resultstextview-callbacks.c  resultstextview-output.c  resultstextview-resultsview-interface.c  resultstextview.c  resultsview.c  search-data.c  searchentry-actionable-interface.c  searchentry-callbacks.c  searchentry.c  searchwidget-actionable-interface.c  searchwidget-callbacks.c  searchwidget-callbacks.c.backup  searchwidget-menuable-interface.c  searchwidget-menumodel-window.ui  (+39 more)
src/libgwaei/include/libgwaei/: Makefile.am  actionable.h  actiongroup.h  addvocabularydialog-callbacks.h  addvocabularydialog-private.h  addvocabularydialog.h  deletevocabularylistdialog-callbacks.h  deletevocabularylistdialog-private.h  deletevocabularylistdialog.h  dictionarylist-callbacks.h  dictionarylist-iter.h  dictionarylist-private.h  dictionarylist.h  dictionarylistbox-callbacks.h  dictionarylistbox-private.h  dictionarylistbox.h  dictionaryliststore-callbacks.h  dictionaryliststore-private.h  dictionaryliststore-treemodel-interface.h  dictionaryliststore.h  dictionarylistview-private.h  dictionarylistview.h  dictionaryview-private.h  dictionaryview.h  libgwaei.h  menuable.h  resultstextview-actionable-interface.h  resultstextview-callbacks.h  resultstextview-private.h  resultstextview-resultsview-interface.h  resultstextview.h  resultsview-private.h  resultsview.h  searchentry-actionable-interface.h  searchentry-callbacks.h  searchentry-private.h  searchentry.h  searchwidget-actionable-interface.h  searchwidget-callbacks.h  searchwidget-menuable-interface.h  (+37 more)
src/libwaei/: Makefile.am  application.c  application.h  cache-file.c  cachefile.c  column-match-info.c  command.c  condition.c  condition.h  dependancy.c  dictionaries-column.c  dictionaries-column.h  dictionaries.c  dictionaries.h  dictionary-cache-tree.c  dictionary-cache.c  dictionary-cache.h  dictionary-callbacks.c  dictionary-column-handling.c  dictionary-column-handling.h  dictionary-index.c  dictionary-install.c  dictionary-install.h  dictionary-installer.c  dictionary-installs.c  dictionary-installs.h  dictionary-module.c  dictionary-module.h  dictionary-regex.c  dictionary.c  dictionary.h  dictionarybuffer.c  dictionarycache.c  dictionarycachetree.c  dictionarydata.c  dictionaryinstall.c  dictionaryinstalllist-callbacks.c  dictionaryinstalllist.c  dictionaryinstallstate.c  dictionaryinstallstatehistory.c  (+97 more)
src/libwaei-dictionary/: Makefile.am  edictionary.c  exampledictionary.c  kanjidictionary.c  radicalsdictionary.c  unknowndictionary.c
src/libwaei/include/libwaei/: Makefile.am  application-private.h  application.h  cache-file.h  cachefile-private.h  cachefile.h  column-match-info.h  command-private.h  command.h  condition.h  definitions.h  dependancy.h  dictionaries.h  dictionary-cache-tree.h  dictionary-cache.h  dictionary-callbacks.h  dictionary-index.h  dictionary-installer.h  dictionary-installs.h  dictionary-private.h  dictionary.h  dictionarybuffer-private.h  dictionarybuffer.h  dictionarycache-private.h  dictionarycache.h  dictionarycachetree.h  dictionarydata.h  dictionaryinstall-private.h  dictionaryinstall.h  dictionaryinstalllist-callbacks.h  dictionaryline.h  (+85 more)
src/libwaei/tests/: Makefile.am  edictionary.c  index.c  morphology.c  parenthesisnode.c  querynode.c  testcachefile.c  testdictionary.c  testdictionary.h  testdictionarycache.c  testdictionarycachetree.c  testio.c  testmappedfile.c  testparenthesisnode.c  testparsed.c  testparsedline.c  testprogress.c  testquerynode.c  testquerynodecolumnmatchinfo.c  testquerynodematchinfo.c  testquerynodematchmarker.c  testresults.c  testsearch.c  testutf8.c
(+148 files in other folders)
