libraryincludedir = $(includedir)/libgwaei
libraryinclude_HEADERS = searchentry.h libgwaei.h window.h resultsview.h searchwidget.h dictionarylistbox.h actiongroup.h actionable.h menuable.h dictionaryliststore.h

noinst_HEADERS = gettext.h searchentry-private.h dictionarylistbox-private.h dictionarylistbox-callbacks.h dictionaryliststore-private.h dictionaryliststore-treemodel-interface.h resultstextview-private.h resultstextview-callbacks.h searchwidget-private.h searchwidget-callbacks.h window-private.h window-callbacks.h texttagtable-private.h texttagtable-callbacks.h vocabularylistview-callbacks.h vocabularylistview-actionable-interface.h
