libraryincludedir = $(includedir)/libwaei
libraryinclude_HEADERS = definitions.h dictionary.h dictionary-index.h edictionary.h kanjidictionary.h exampledictionary.h radicalsdictionary.h unknowndictionary.h dictionaryinstall.h dictionarylist.h history.h cachefile.h io.h libwaei.h morphologystring.h preferences.h range.h regex.h search.h utilities.h word.h vocabulary.h progress.h

noinst_HEADERS = gettext.h dictionary-private.h dictionary-callbacks.h dictionarylist-private.h dictionarylist-callbacks.h history-private.h vocabulary-private.h dictionaryinstall-private.h
