libraryincludedir = $(includedir)/libwaei
libraryinclude_HEADERS = serializable.h iterable.h mapped-file.h cache-file.h io.h
#libraryinclude_HEADERS = definitions.h dictionary.h dictionary-index.h dictionaryinstall.h dictionarylist.h cachefile.h io.h preferences.h range.h search.h word.h vocabulary.h progress.h parenthesisnode.h querynode.h querynodematchinfo.h querynodematchmarker.h

#noinst_HEADERS = gettext.h dictionary-callbacks.h dictionarylist-private.h dictionarylist-callbacks.h vocabulary-private.h dictionaryinstall-private.h
